fix: fix search box width on mobile

--- a/src/sass/searchBox.scss
+++ b/src/sass/searchBox.scss
@@ -6,6 +6,10 @@
 	max-width: 560px;
 	overflow: hidden;
 
+	@media screen and (max-width: 480px){
+		width: 80%;
+	}
+
 	&__input {
 		padding: 10px 20px;
 		margin: 0;
